[#1] upgrade registry app, add style and upgrade flow

--- a/chat/registry/templates/registration/signUp.html
+++ b/chat/registry/templates/registration/signUp.html
@@ -8,12 +8,10 @@
                 <form method="POST">
                     {% csrf_token %}
                     {{ form.as_p }}
-                    <input class="btn btn-success" type="submit" value="Login">
+                    <input class="btn btn-success" type="submit" value="Sign Up">
                 </form>
             </div>
         </div>
     </div>
-
-<body>
 
 {% endblock %}
