--- a/chat/registry/templates/dashboard.html
+++ b/chat/registry/templates/dashboard.html
@@ -1,14 +1,7 @@
-{% extends 'index.html' %}
+{% extends 'base.html' %}
 
 {% block content %}
 
     <h1> Welcome, {{user.username}} </h1>
-    
-    {% if user.is_authenticated %} 
-        <a href="{% url 'logout' %}"> Logout </a>
-    {% else %}
-        <a href="{% url 'signIn' %}"> Sign In </a>
-        <a href="{% url 'login' %}"> Login </a>
-    {% endif %}
 
 {% endblock  %}
