[#3] move templates to root and create room app with dashboard redirect

--- a/chat/templates/dashboard/home.html
+++ b/chat/templates/dashboard/home.html
@@ -1,6 +1,6 @@
-{% extends 'base.html' %}
+{% extends 'dashboard/nav.html' %}
 
-{% block content %}
+{% block subcontent %}
 
     <h1> Welcome, {{user.username}} </h1>
 
