--- a/chat/templates/registration/login.html
+++ b/chat/templates/registration/login.html
@@ -1,6 +1,6 @@
-{% extends 'base.html' %}
+{% extends 'registration/nav.html' %}
 
-{% block content %}
+{% block subcontent %}
 
     <div class="row my-4">
         <div class="col-md-6 offset-md-3">
@@ -13,7 +13,5 @@
             </div>
         </div>
     </div>
-
-<body>
 
 {% endblock %}
