--- a/chat/templates/base.html
+++ b/chat/templates/base.html
@@ -3,7 +3,7 @@
 <html>
 <head>
     <style>
-        ul {
+        .ul-top {
             list-style-type: none;
             margin: 0;
             padding: 0;
@@ -11,11 +11,11 @@
             background-color: #333;
         }
 
-        li {
+        .li-top {
             float: left;
         }
 
-        li a {
+        .li-a-top {
             display: block;
             color: white;
             text-align: center;
@@ -23,11 +23,11 @@
             text-decoration: none;
         }
 
-        li a:hover:not(.active) {
+        .li-a-top:hover:not(.active) {
             background-color: #111;
         }
 
-        h5 {
+        .li-h5-top {
             display: block;
             color: white;
             text-align: center;
@@ -35,10 +35,42 @@
             text-decoration: none;
         }
 
-        html, body {
-            background: gray;
-            margin: 0;
-            height: 100%;
+        .divider {
+        border-left: 1px solid;
+        }
+
+        /* Chat containers */
+        .container {
+            border: 2px solid #dedede;
+            background-color: #f1f1f1;
+            border-radius: 5px;
+            padding: 10px;
+            margin: 10px 0;
+        }
+
+        /* Darker chat container */
+        .darker {
+            border-color: #ccc;
+            background-color: #ddd;
+        }
+
+        /* Clear floats */
+        .container::after {
+            content: "";
+            clear: both;
+            display: table;
+        }
+
+        /* Style time text */
+        .time-right {
+            float: right;
+            color: #aaa;
+        }
+
+        /* Style time text */
+        .time-left {
+            float: left;
+            color: #999;
         }
     </style>
     <title>Stocks Chat</title>
