--- a/chat/templates/dashboard/rooms/nav.html
+++ b/chat/templates/dashboard/rooms/nav.html
@@ -5,6 +5,7 @@
     <ul class="ul-top">
         <li class="li-top"><h5 class="li-h5-top" color="white">Stocks Chat</h5></li>
         <li class="li-top" style="float:right"><a class="li-a-top" href="{% url 'logout' %}">Logout</a></li>
+        <li class="li-top" style="float:right"><a class="li-a-top" href="{% url 'create-room' %}">+</a></li>
     </ul>
 
     {% block subcontent %}
