--- a/chat/templates/base.html
+++ b/chat/templates/base.html
@@ -38,8 +38,7 @@
         .divider {
         border-left: 1px solid;
         }
-
-        /* Chat containers */
+        
         .container {
             border: 2px solid #dedede;
             background-color: #f1f1f1;
@@ -48,13 +47,11 @@
             margin: 10px 0;
         }
 
-        /* Darker chat container */
         .darker {
-            border-color: #ccc;
-            background-color: #ddd;
+            border-color: #bbb;
+            background-color: #ccc;
         }
 
-        /* Clear floats */
         .container::after {
             content: "";
             clear: both;
@@ -64,13 +61,13 @@
         /* Style time text */
         .time-right {
             float: right;
-            color: #aaa;
+            color: #888;
         }
 
         /* Style time text */
         .time-left {
             float: left;
-            color: #999;
+            color: #888;
         }
     </style>
     <title>Stocks Chat</title>
