[#7] add ajax to provide async chat update

--- a/chat/templates/base.html
+++ b/chat/templates/base.html
@@ -77,9 +77,9 @@
 </head>
 <body>
     <center>
-        {% block content %}
-
-        {% endblock %}
+        {% block content %} {% endblock %}
     </center>
+
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
 </body>
 </html>
