[#7] rename app and do some adjustments

--- a/chat/templates/dashboard/rooms/nav.html
+++ b/chat/templates/dashboard/rooms/nav.html
@@ -6,6 +6,7 @@
         <li class="li-top"><h5 class="li-h5-top" color="white">Stocks Chat</h5></li>
         <li class="li-top" style="float:right"><a class="li-a-top" href="{% url 'logout' %}">Logout</a></li>
         <li class="li-top" style="float:right"><a class="li-a-top" href="{% url 'create_room' %}">+</a></li>
+        <li><h5 class="li-h5-top"> Rooms List </h5></li>
     </ul>
 
     {% block subcontent %}
