--- a/chat/templates/dashboard/chat/home.html
+++ b/chat/templates/dashboard/chat/home.html
@@ -2,26 +2,24 @@
 
 {% block subcontent %}
 
-<div align="left" style="padding: 0% 1%;">
-    <h4> Welcome, {{user.username}} </h4>
-</div>
-
 <div class="flexbox-container" style="display:flex;">
-    <div class="chat" style="flex:1;">
+    <div class="chat" style="flex:1; width=90%;">
         <nav>
             <ul style="list-style-type:none;">
-                <h5>{{room.name}}</h5>
                 <li> <div id="messages" style="max-height: 500px; overflow-y: scroll;"></div> </li>
-                <input type="text" id="input_message" name="message" onkeypress="checkKey();" placeholder="Type a message">
-                <button class="btn btn-primary" type="submit" name='send' onclick="sendMessage();"> Send </button>
             </ul>
         </nav>
+        <input class="input-chat" type="text" id="input_message" name="message" onkeypress="checkKey();" placeholder="Type a message">
+        <button class="btn btn-primary" type="submit" name='send' onclick="sendMessage();"> Send </button>
     </div>
 </div>
 
 {% load js %}
 
 <script>
+window.onload = function() {
+  getMessages();
+};
 
 setInterval( getMessages, 1000 );
 
@@ -61,8 +59,6 @@ function getMessages() {
             if (data.messages.length > 0) {
                 var messages_formatted = "";
                 for (var i=0; i<data.messages.length; i++) {
-                    console.log(user_id)
-                    console.log(data.messages[i].user_id)
                     if (user_id == data.messages[i].user_id){
                         messages_formatted += (
                             `
@@ -85,7 +81,12 @@ function getMessages() {
                         );
                     }
                 }
+                var scroll = (document.querySelector('#messages').innerHTML != messages_formatted)
                 document.querySelector('#messages').innerHTML = messages_formatted
+                if (scroll) {
+                    let messages_div = document.getElementById("messages");
+                    messages_div.scrollTop = messages_div.scrollHeight;
+                }
             }
     }
     });
