--- a/chat/templates/dashboard/chat/nav.html
+++ b/chat/templates/dashboard/chat/nav.html
@@ -3,9 +3,10 @@
 {% block content %}
 
     <ul class="ul-top">
-        <li class="li-top"><h5 class="li-h5-top" color="white">Stocks Chat</h5></li>
-        <li class="li-top" style="float:right"><a class="li-a-top" href="{% url 'logout' %}">Logout</a></li>
-        <li class="li-top" style="float:right"><a class="li-a-top" href="{% url 'rooms' %}">Rooms</a></li>
+        <li class="li-top"><h5 class="li-h5-top"> Stocks Chat </h5></li>
+        <li class="li-top" style="float:right"><a class="li-a-top" href="{% url 'logout' %}"> Logout </a></li>
+        <li class="li-top" style="float:right"><a class="li-a-top" href="{% url 'rooms' %}"> Rooms </a></li>
+        <li><h5 class="li-h5-top">{{room.name}}</h5></li>
     </ul>
 
     {% block subcontent %}
