--- a/chat/templates/dashboard/rooms/home.html
+++ b/chat/templates/dashboard/rooms/home.html
@@ -2,6 +2,9 @@
 
 {% block subcontent %}
 
+        <li><h5 class="li-h5-top"> Rooms List </h5></li>
+    </ul>
+    
     <div class="flexbox-container" style="display:flex;">
         <div class="sidebar" style="flex:1;">
             <nav>
