--- a/chat/static/css/styles.css
+++ b/chat/static/css/styles.css
@@ -33,7 +33,7 @@
 
 /* chat list */
 .container {
-    border: 2px solid #dedede;
+    border: 2px solid #bbb;
     background-color: #f1f1f1;
     border-radius: 5px;
     padding: 5px;
@@ -43,6 +43,16 @@
 .darker {
     border-color: #bbb;
     background-color: #ccc;
+}
+
+.stockbot {
+    border-color: #bbb;
+    background-color: #99CC99;
+}
+
+.stockbot-fail {
+    border-color: #bbb;
+    background-color: #e2acac;
 }
 
 .container::after {
