--- a/chat/static/css/styles.css
+++ b/chat/static/css/styles.css
@@ -31,7 +31,7 @@
     text-decoration: none;
 }
 
-/* chat list */
+/* room and chat list */
 .container {
     border: 2px solid #bbb;
     background-color: #f1f1f1;
@@ -40,6 +40,15 @@
     margin: 5px 0;
 }
 
+/* room list */
+.button-room {
+    width:100%;
+    display:block;
+    border: 0px solid #bbb;
+    background-color: #f1f1f1;
+}
+
+/* chat list */
 .darker {
     border-color: #bbb;
     background-color: #ccc;
