--- a/chat/templates/dashboard/chat/home.html
+++ b/chat/templates/dashboard/chat/home.html
@@ -3,7 +3,7 @@
 {% block subcontent %}
 
 <div class="flexbox-container" style="display:flex;">
-    <div class="chat" style="flex:1; width=90%;">
+    <div class="chat" style="flex:1;">
         <nav>
             <ul style="list-style-type:none;">
                 <li> <div id="messages" style="max-height: 500px; overflow-y: scroll;"></div> </li>
