--- a/chat/templates/registration/nav.html
+++ b/chat/templates/registration/nav.html
@@ -1,15 +1,13 @@
-{% extends 'base.html' %}
+{% extends 'base.html' %} {% block content %}
 
-{% block content %}
+<ul class="ul-top">
+  <li class="li-top"><h5 class="li-h5-top">Stocks Chat</h5></li>
+  <li class="li-top" style="float: right">
+    <a class="li-a-top" href="{% url 'login' %}">Login</a>
+  </li>
+  <li class="li-top" style="float: right">
+    <a class="li-a-top" href="{% url 'signUp' %}">Sign Up</a>
+  </li>
+</ul>
 
-    <ul class="ul-top">
-        <li class="li-top"><h5 class="li-h5-top">Stocks Chat</h5></li>
-        <li class="li-top" style="float:right"><a class="li-a-top" href="{% url 'login' %}">Login</a></li>
-        <li class="li-top" style="float:right"><a class="li-a-top" href="{% url 'signUp' %}">Sign Up</a></li>
-    </ul>
-
-    {% block subcontent %}
-
-    {% endblock %}
-
-{% endblock %}
+{% block subcontent %} {% endblock %} {% endblock %}
