--- a/chat/templates/dashboard/chat/home.html
+++ b/chat/templates/dashboard/chat/home.html
@@ -1,122 +1,139 @@
-{% extends 'dashboard/chat/nav.html' %}
+{% extends 'dashboard/chat/nav.html' %} {% block subcontent %}
 
-{% block subcontent %}
-
-<div class="flexbox-container" style="display:flex;">
-    <div class="chat" style="flex:1;">
-        <nav>
-            <ul style="list-style-type:none;">
-                <li> <div id="messages" style="max-height: 500px; overflow-y: scroll;"></div> </li>
-            </ul>
-        </nav>
-        <input class="input-chat" type="text" id="input_message" name="message" onkeypress="checkKey();" placeholder="Type a message">
-        <button class="btn btn-primary" type="submit" name='send' onclick="sendMessage();"> Send </button>
-    </div>
+<div class="flexbox-container" style="display: flex">
+  <div class="chat" style="flex: 1">
+    <nav>
+      <ul style="list-style-type: none">
+        <li>
+          <div
+            id="messages"
+            style="max-height: 500px; overflow-y: scroll"
+          ></div>
+        </li>
+      </ul>
+    </nav>
+    <input
+      class="input-chat"
+      type="text"
+      id="input_message"
+      name="message"
+      onkeypress="checkKey();"
+      placeholder="Type a message"
+    />
+    <button
+      class="btn btn-primary"
+      type="submit"
+      name="send"
+      onclick="sendMessage();"
+    >
+      Send
+    </button>
+  </div>
 </div>
 
 {% load js %}
 
 <script>
-window.onload = function() {
-  getMessages();
-};
+  window.onload = function() {
+    getMessages();
+  };
 
-setInterval( getMessages, 1000 );
+  setInterval( getMessages, 1000 );
 
-function checkKey() {
-    let key = window.event.keyCode;
-    if (key===13) { // Enter
-        sendMessage();
-    }
-}
+  function checkKey() {
+      let key = window.event.keyCode;
+      if (key===13) { // Enter
+          sendMessage();
+      }
+  }
 
-function sendMessage() {
-    $.ajax({
-        type: 'POST',
-        url: '{% url 'send_message' %}',
-        data: {
-            csrfmiddlewaretoken: '{{ csrf_token }}',
-            room_id: "{{room.id|js}}",
-            message: document.querySelector('#input_message').value
-        },
-        success: function (data) {
-            document.querySelector('#input_message').value = "";
-            getMessages();
-        }
-    });
-}
+  function sendMessage() {
+      $.ajax({
+          type: 'POST',
+          url: '{% url 'send_message' %}',
+          data: {
+              csrfmiddlewaretoken: '{{ csrf_token }}',
+              room_id: "{{room.id|js}}",
+              message: document.querySelector('#input_message').value
+          },
+          success: function (data) {
+              document.querySelector('#input_message').value = "";
+              getMessages();
+          }
+      });
+  }
 
-function getMessages() {
-    var user_id = "{{user.id|js}}";
-    var user_id = "{{user.id|js}}";
-    $.ajax({
-        type: 'GET',
-        url: '{% url 'get_messages' %}',
-        data: {
-            csrfmiddlewaretoken: '{{ csrf_token }}',
-            room_id: "{{room.id|js}}",
-        },
-        success: function (data) {
-            if (data.messages.length > 0) {
-                var messages_formatted = "";
-                for (var i=0; i<data.messages.length; i++) {
-                    if (user_id == data.messages[i].user_id){
-                        messages_formatted += (
-                            `
-                            <div class="container">
-                                <p align="right">${data.messages[i].text}</p>
-                                <span class="time-right">${data.messages[i].user_name}</span>
-                                <span class="time-left">${data.messages[i].datetime}</span>
-                            </div>
-                            `
-                        );
-                    }
-                    else if (data.bot_id == data.messages[i].user_id){
-                        if (data.messages[i].text.includes('$')){
-                            messages_formatted += (
-                                `
-                                <div class="container stockbot">
-                                    <p align="left">${data.messages[i].text}</p>
-                                    <span class="time-left">${data.messages[i].user_name}</span>
-                                    <span class="time-right">${data.messages[i].datetime}</span>
-                                </div>
-                                `
-                            );
-                        }
-                        else{
-                            messages_formatted += (
-                                `
-                                <div class="container stockbot-fail">
-                                    <p align="left">${data.messages[i].text}</p>
-                                    <span class="time-left">${data.messages[i].user_name}</span>
-                                    <span class="time-right">${data.messages[i].datetime}</span>
-                                </div>
-                                `
-                            );
-                        }
-                    }
-                    else{
-                        messages_formatted += (
-                            `
-                            <div class="container darker">
-                                <p align="left">${data.messages[i].text}</p>
-                                <span class="time-left">${data.messages[i].user_name}</span>
-                                <span class="time-right">${data.messages[i].datetime}</span>
-                            </div>
-                            `
-                        );
-                    }
-                }
-                var scroll = (document.querySelector('#messages').innerHTML != messages_formatted)
-                document.querySelector('#messages').innerHTML = messages_formatted
-                if (scroll) {
-                    let messages_div = document.getElementById("messages");
-                    messages_div.scrollTop = messages_div.scrollHeight;
-                }
-            }
-    }
-    });
-}
+  function getMessages() {
+      var user_id = "{{user.id|js}}";
+      var user_id = "{{user.id|js}}";
+      $.ajax({
+          type: 'GET',
+          url: '{% url 'get_messages' %}',
+          data: {
+              csrfmiddlewaretoken: '{{ csrf_token }}',
+              room_id: "{{room.id|js}}",
+          },
+          success: function (data) {
+              if (data.messages.length > 0) {
+                  var messages_formatted = "";
+                  for (var i=0; i<data.messages.length; i++) {
+                      if (user_id == data.messages[i].user_id){
+                          messages_formatted += (
+                              `
+                              <div class="container">
+                                  <p align="right">${data.messages[i].text}</p>
+                                  <span class="time-right">${data.messages[i].user_name}</span>
+                                  <span class="time-left">${data.messages[i].datetime}</span>
+                              </div>
+                              `
+                          );
+                      }
+                      else if (data.bot_id == data.messages[i].user_id){
+                          if (data.messages[i].text.includes('$')){
+                              messages_formatted += (
+                                  `
+                                  <div class="container stockbot">
+                                      <p align="left">${data.messages[i].text}</p>
+                                      <span class="time-left">${data.messages[i].user_name}</span>
+                                      <span class="time-right">${data.messages[i].datetime}</span>
+                                  </div>
+                                  `
+                              );
+                          }
+                          else{
+                              messages_formatted += (
+                                  `
+                                  <div class="container stockbot-fail">
+                                      <p align="left">${data.messages[i].text}</p>
+                                      <span class="time-left">${data.messages[i].user_name}</span>
+                                      <span class="time-right">${data.messages[i].datetime}</span>
+                                  </div>
+                                  `
+                              );
+                          }
+                      }
+                      else{
+                          messages_formatted += (
+                              `
+                              <div class="container darker">
+                                  <p align="left">${data.messages[i].text}</p>
+                                  <span class="time-left">${data.messages[i].user_name}</span>
+                                  <span class="time-right">${data.messages[i].datetime}</span>
+                              </div>
+                              `
+                          );
+                      }
+                  }
+                  var scroll = (document.querySelector('#messages').innerHTML != messages_formatted)
+                  document.querySelector('#messages').innerHTML = messages_formatted
+                  if (scroll) {
+                      let messages_div = document.getElementById("messages");
+                      messages_div.scrollTop = messages_div.scrollHeight;
+                  }
+              }
+      }
+      });
+  }
 </script>
 
-{% endblock  %}
+{% endblock %}
