--- a/chat/templates/dashboard/chat/nav.html
+++ b/chat/templates/dashboard/chat/nav.html
@@ -1,16 +1,14 @@
-{% extends 'base.html' %}
+{% extends 'base.html' %} {% block content %}
 
-{% block content %}
+<ul class="ul-top">
+  <li class="li-top"><h5 class="li-h5-top">Stocks Chat</h5></li>
+  <li class="li-top" style="float: right">
+    <a class="li-a-top" href="{% url 'logout' %}"> Logout </a>
+  </li>
+  <li class="li-top" style="float: right">
+    <a class="li-a-top" href="{% url 'rooms' %}"> Rooms </a>
+  </li>
+  <li><h5 class="li-h5-top">{{room.name}}</h5></li>
+</ul>
 
-    <ul class="ul-top">
-        <li class="li-top"><h5 class="li-h5-top"> Stocks Chat </h5></li>
-        <li class="li-top" style="float:right"><a class="li-a-top" href="{% url 'logout' %}"> Logout </a></li>
-        <li class="li-top" style="float:right"><a class="li-a-top" href="{% url 'rooms' %}"> Rooms </a></li>
-        <li><h5 class="li-h5-top">{{room.name}}</h5></li>
-    </ul>
-
-    {% block subcontent %}
-
-    {% endblock %}    
-
-{% endblock %}
+{% block subcontent %} {% endblock %} {% endblock %}
