--- a/chat/templates/dashboard/rooms/nav.html
+++ b/chat/templates/dashboard/rooms/nav.html
@@ -1,12 +1,13 @@
-{% extends 'base.html' %}
+{% extends 'base.html' %} {% block content %}
 
-{% block content %}
+<ul class="ul-top">
+  <li class="li-top"><h5 class="li-h5-top" color="white">Stocks Chat</h5></li>
+  <li class="li-top" style="float: right">
+    <a class="li-a-top" href="{% url 'logout' %}">Logout</a>
+  </li>
+  <li class="li-top" style="float: right">
+    <a class="li-a-top" href="{% url 'create_room' %}">+</a>
+  </li>
 
-    <ul class="ul-top">
-        <li class="li-top"><h5 class="li-h5-top" color="white">Stocks Chat</h5></li>
-        <li class="li-top" style="float:right"><a class="li-a-top" href="{% url 'logout' %}">Logout</a></li>
-        <li class="li-top" style="float:right"><a class="li-a-top" href="{% url 'create_room' %}">+</a></li>
-
-    {% block subcontent %} {% endblock %}
-
-{% endblock %}
+  {% block subcontent %} {% endblock %} {% endblock %}
+</ul>
