--- a/chat/static/css/styles.css
+++ b/chat/static/css/styles.css
@@ -1,93 +1,93 @@
 /* nav bar */
 .ul-top {
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
-    overflow: hidden;
-    background-color: #333;
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
+  background-color: #333;
 }
 
 .li-top {
-    float: left;
+  float: left;
 }
 
 .li-a-top {
-    display: block;
-    color: white;
-    text-align: center;
-    padding: 14px 16px;
-    text-decoration: none;
+  display: block;
+  color: white;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
 }
 
 .li-a-top:hover:not(.active) {
-    background-color: #111;
+  background-color: #111;
 }
 
 .li-h5-top {
-    display: block;
-    color: white;
-    text-align: center;
-    padding: 12px 16px;
-    text-decoration: none;
+  display: block;
+  color: white;
+  text-align: center;
+  padding: 12px 16px;
+  text-decoration: none;
 }
 
 /* room and chat list */
 .container {
-    border: 2px solid #bbb;
-    background-color: #f1f1f1;
-    border-radius: 5px;
-    padding: 5px;
-    margin: 5px 0;
+  border: 2px solid #bbb;
+  background-color: #f1f1f1;
+  border-radius: 5px;
+  padding: 5px;
+  margin: 5px 0;
 }
 
 /* room list */
 .button-room {
-    width:100%;
-    display:block;
-    border: 0px solid #bbb;
-    background-color: #f1f1f1;
+  width: 100%;
+  display: block;
+  border: 0px solid #bbb;
+  background-color: #f1f1f1;
 }
 
 /* chat list */
 .darker {
-    border-color: #bbb;
-    background-color: #ccc;
+  border-color: #bbb;
+  background-color: #ccc;
 }
 
 .stockbot {
-    border-color: #bbb;
-    background-color: #99CC99;
+  border-color: #bbb;
+  background-color: #99cc99;
 }
 
 .stockbot-fail {
-    border-color: #bbb;
-    background-color: #e2acac;
+  border-color: #bbb;
+  background-color: #e2acac;
 }
 
 .container::after {
-    content: "";
-    clear: both;
-    display: table;
+  content: "";
+  clear: both;
+  display: table;
 }
 
 .time-right {
-    float: right;
-    color: #888;
+  float: right;
+  color: #888;
 }
 
 .time-left {
-    float: left;
-    color: #888;
+  float: left;
+  color: #888;
 }
 
 .input-chat {
-    flex-wrap: wrap;
-    -webkit-box-sizing: border-box;
-    -moz-box-sizing: border-box;
-    box-sizing: border-box;
-    border: 2px solid #dedede;
-    background-color: #f1f1f1;
-    border-radius: 5px;
-    padding: 10px;
-    margin: 10px 0;
+  flex-wrap: wrap;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+  border: 2px solid #dedede;
+  background-color: #f1f1f1;
+  border-radius: 5px;
+  padding: 10px;
+  margin: 10px 0;
 }
